--- a/composer.json
+++ b/composer.json
@@ -16,10 +16,11 @@
         "ext-json": "*"
     },
     "require-dev": {
-        "phpunit/phpunit": "^7.0|^8.0|^9.0",
+        "orchestra/testbench": "^3.8|^4.0|^5.0|^6.0",
         "phpstan/phpstan": "^0.12",
+        "phpunit/phpunit": "^7.0|^8.0|^9.0",
         "squizlabs/php_codesniffer": "^3.5",
-        "orchestra/testbench": "^3.8|^4.0|^5.0|^6.0"
+        "vlucas/phpdotenv": "^5.6"
     },
     "autoload": {
         "psr-4": {
